# ChatMem

./: .gitignore  .mcp.json  DEVELOPMENT.md  README.md  package-lock.json  package.json  pr-body-comprehensive.md  pr-body.md  release-notes-v1.1.3.md  release-notes.md
.codex/environments/: environment.toml
.github/workflows/: ci-probe.yml  release.yml
crates/agentswap-claude/src/: adapter.rs
crates/agentswap-codex/src/: adapter.rs
crates/agentswap-core/src/: lib.rs  titles.rs  (+2 more)
crates/agentswap-hermes/: Cargo.toml
crates/agentswap-kimi/: Cargo.toml
crates/agentswap-kimi/src/: adapter.rs  lib.rs
crates/agentswap-zcode/: Cargo.toml
crates/agentswap-zcode/src/: adapter.rs  lib.rs
docs/: CHATMEM_ARCHITECTURE_AND_FEATURES.md  CHATMEM_MCP_SETUP.md  CHATMEM_RELEASE_CHECKLIST.md  cross-platform-filename-encoding.md  macos-onedrive-sync-report.md  macos-sync-adaptation-guide.md  macos-v1.1.3-dev-report.md  v1.2.0-macos-changes.md  windows-summary-migration-implementation.md  windows-v1.2.2-favorites-implementation.md  windows-v1.3.0-workbench-implementation.md  windows-v1.3.2-antigravity-implementation.md  windows-v1.3.3-kimi-implementation.md
docs/releases/: v1.2.1.md  v1.2.2.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v1.3.5.md  v1.3.6.md
mcp/: run-chatmem-mcp.mjs
native/ChatMemNew/: Package.swift
script/: build_and_run_native.sh
scripts/: eval-continuation-brief.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon-template.icns
src-tauri/src/: agent_integration.rs  github_update.rs  local_sync.rs  main.rs
src-tauri/src/chatmem_memory/: mcp.rs  models.rs  repo_identity.rs  runs.rs  store.rs  sync.rs
src/__tests__/: App.test.tsx  CheckpointsWorkspace.test.tsx  ConversationDetail.test.tsx  ConversationList.test.tsx  HandoffLifecycle.test.tsx  LibraryWorkspace.test.tsx  MemoryFreshness.test.tsx  MemoryWorkspace.test.tsx  RepoMemoryPanel.test.tsx  RunsWorkspace.test.tsx  SyncSettings.test.tsx  continuationBrief.test.ts  continuationBriefEval.test.ts  continuationBriefEvalCases.test.ts  conversationLayoutCss.test.ts  integrationManifests.test.ts  releaseWorkflow.test.ts  settingsStorage.test.ts  titleUtils.test.ts  updater.test.ts
src/chatmem-memory/: api.ts  types.ts
src/components/: ConversationDetail.tsx  ConversationList.tsx  MigrateModal.tsx  SettingsPanel.tsx
src/settings/: storage.ts
src/updater/: updater.ts
src/utils/: continuationBrief.ts  continuationBriefEval.ts  continuationBriefEvalCases.ts  titleUtils.ts
(+28 files in other folders)
