[package]
name = "chatmem"
version = "1.1.3"
default-run = "chatmem"
description = "ChatMem - Local-first memory for AI coding agents"
authors = ["ChatMem"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = [ "dialog-open", "window-all", "shell-open", "updater"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
walkdir = "2"
dirs = "5"
toml_edit = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
schemars = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
keyring = "3"
cocoa = "0.24"
objc = "0.2"

# Vendored AgentSwap parser crates for standalone CI builds
agentswap-core = { path = "../crates/agentswap-core" }
agentswap-claude = { path = "../crates/agentswap-claude" }
agentswap-codex = { path = "../crates/agentswap-codex" }
agentswap-gemini = { path = "../crates/agentswap-gemini" }
agentswap-opencode = { path = "../crates/agentswap-opencode" }
agentswap-zcode = { path = "../crates/agentswap-zcode" }
agentswap-hermes = { path = "../crates/agentswap-hermes" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
