[package]
name = "agentswap-kimi"
version = "0.1.0"
edition = "2021"

[dependencies]
agentswap-core = { path = "../agentswap-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
